Update dependencies and fix some error prone warnings